feat: add dtd file

--- a/sample/src/main/res/xml/chameleon_page.xml
+++ b/sample/src/main/res/xml/chameleon_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<!DOCTYPE Chameleon SYSTEM "chameleon.dtd">-->
 <Chameleon>
     <Page
         title="Test Page"
