feat: communicate with broadcast

--- a/core/src/main/res/layout/item_text.xml
+++ b/core/src/main/res/layout/item_text.xml
@@ -14,7 +14,7 @@
         tools:text="Label" />
 
     <TextView
-        android:id="@+id/value"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
