--- a/core/src/main/res/layout/item_button.xml
+++ b/core/src/main/res/layout/item_button.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/item_height">
 
     <TextView
-        android:id="@+id/root"
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
